CMS-669: Fix an issue that voiceover reads all menu items on mobile (#1581)
* CMS-669: Fix an issue that voiceover reads all menu items on mobile

* CMS-668: Display 'Skip to main content' when it gets focused on mobile

--- a/src/gatsby/src/styles/bootstrapTheme.scss
+++ b/src/gatsby/src/styles/bootstrapTheme.scss
@@ -46,3 +46,7 @@ a {
   background-color: $colorWhite;
   border-color: $colorBlue;
 }
+
+.visually-hidden-focusable:not(:focus):not(:focus-within):not(caption):focus-visible {
+  position: static !important;
+}
